--- a/Lecture 22 - JS/corosoul/index.html
+++ b/Lecture 22 - JS/corosoul/index.html
@@ -22,7 +22,7 @@
     </style>
   </head>
   <body>
-    <div id="slideshow">
+    <!-- <div id="slideshow">
       <img
         class="slide"
         src="https://images.pexels.com/photos/1938123/pexels-photo-1938123.jpeg?auto=compress&cs=tinysrgb&w=600"
@@ -48,7 +48,9 @@
         src="https://images.pexels.com/photos/1093126/pexels-photo-1093126.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
         alt="Slide 5"
       />
-    </div>
+    </div> -->
+
+    <img src="" />
 
     <script src="app.js"></script>
   </body>
